--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
     <div class="col-md-3">
       <app-brand></app-brand>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-3">
+      <app-color></app-color>
+    </div>
+    <div class="col-md-6">
       <app-car></app-car>
     </div>
 
