--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,18 +1,17 @@
 <table  class="table">
   <thead>
     <tr>
-      <th>Id</th>
-      <th>brandId</th>
-      <th>colorId</th>
+      <th>brandName</th>
+      <th>colorName</th>
       <th>modelYear</th>
       <th>Daily Price </th>
       <th>Description</th>
     </tr>
   </thead>
   <tr *ngFor="let car of cars">
-    <td>{{car.id}}</td>
-    <td>{{car.brandId}}</td>
-    <td>{{car.colorId}}</td>
+
+    <td>{{car.brandName}}</td>
+    <td>{{car.colorName}}</td>
     <td>{{car.modelYear}}</td>
     <td>{{car.dailyPrice}}</td>
     <td>{{car.description}}</td>
