filtering car and bootswatch configuration

--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -15,5 +15,6 @@
     <td>{{car.modelYear}}</td>
     <td>{{car.dailyPrice}}</td>
     <td>{{car.description}}</td>
+    <td><button (click)="getCarDetail(car.id)" type="button" class="btn btn-success">Detaya Git</button> </td>
   </tr>
 </table>
