--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,6 @@
 <ul class="list-group">
-  <li *ngFor="let brand of brands" class="list-group-item">{{brand.brandName}}</li>
+  <li (click)="setAllBrandCClass()" [class]="getAllBrandClass()" routerLink="cars">Markalar</li>
+  <li *ngFor="let brand of brands" [class]="getCurrentBrand(brand)" (click)="setCurrentBrand(brand)"
+  routerLink="cars/brand/{{brand.brandId}}">{{brand.brandName}}</li>
 
 </ul>
