--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -1,1 +1,19 @@
-<p>car-detail works!</p>
+<table  class="table">
+    <thead>
+      <tr>
+        <th>brandName</th>
+        <th>colorName</th>
+        <th>modelYear</th>
+        <th>Daily Price </th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tr *ngFor="let carDetail of carDetails" routerLink="cars/cardetail/{{carDetail.id}}">
+
+      <td>{{carDetail.brandName}}</td>
+      <td>{{carDetail.colorName}}</td>
+      <td>{{carDetail.modelYear}}</td>
+      <td>{{carDetail.dailyPrice}}</td>
+      <td>{{carDetail.description}}</td>
+    </tr>
+  </table>
