--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -8,12 +8,14 @@
         <th>Description</th>
       </tr>
     </thead>
-    <tr *ngFor="let carDetail of carDetails" routerLink="cars/cardetail/{{carDetail.id}}">
+    <tbody>
+    <tr routerLink="cars/cardetail/{{carDetails.carId}}">
 
-      <td>{{carDetail.brandName}}</td>
-      <td>{{carDetail.colorName}}</td>
-      <td>{{carDetail.modelYear}}</td>
-      <td>{{carDetail.dailyPrice}}</td>
-      <td>{{carDetail.description}}</td>
+      <td>{{carDetails.brandName}}</td>
+      <td>{{carDetails.colorName}}</td>
+      <td>{{carDetails.modelYear}}</td>
+      <td>{{carDetails.dailyPrice}}</td>
+      <td>{{carDetails.description}}</td>
     </tr>
+  </tbody>
   </table>
